# Vkus

./: .gitignore  Makefile  app.py  config_app.py  create_app.py  main.py  pyproject.toml  vkus.psql  vkus.sql  wsgi.py
docs/: diary.ipynb  table_food_item.txt  tasks.txt  test.py  Команды
migrations/versions/: eeff8d35f2fb_initial_migration.py
models/: db_requests.py  products.py
models/app/: config_app.py  create_app.py
models/entities/: carts.py  db_requests.py  products.py  products_in_cart.py  users.py
routes/: cards.py  products.py  return_product_data.py  user_session.py
static/: sitemap
static/css/: ##card-style.css  background.css  card-style.css  head.css  modal-window.css
static/css/bucket/: bucket-ico-lighting.css
static/css/contacts/: contact-ico-lighting.css  contacts-1600-main.css  contacts-main.css
static/css/freeze/: freeze-ico-lighting.css
static/css/index/: index.css
static/css/keitering/: keitering-1600-main.css  keitering-ico-lighting.css  keitering-main.css
static/css/menu/: menu-ico-lighting.css
static/js/: notRedirect.js  productCardModalWindow.js
templates/: WET_j_juABSRwmEvWDydVQ1cVqlBpg5OWUT44tAVRck.html  add_product.html  bucket.html  contacts.html  edit_product.html  freeze-food.html  freeze.html  hot-food.html  index.html  keitering.html  menu-pages.html  yandex_f559e94d79b922d3.html
templates/basic/: headfoot.html  products-menu.html
tests/models/: test_db_requests.py
tests/routes/: test_user_session.py
utilits/: freeze-food.csv  hot-food.csv  import_data.py  prepare.py
